--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,33 @@
   </head>
 
   <body>
+		<header>
+  <nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-1">
+          <div class="menu-icon">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+        </div>
+        <div class="col-7">
+          <h1 class="text-center">TRANSACTIONS</h1>
+        </div>
+        <div class="col-2">
+          <div class="search-icon">
+            <i class="fa-solid fa-magnifying-glass fa-beat"></i>
+          </div>
+        </div>
+        <div class="col-2 text-right">
+          <% if user_signed_in? %>
+            <%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: "btn btn-secondary btn-sm" %>
+          <% else %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </nav>
+</header>
     <%= yield %>
   </body>
 </html>
