--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -17,9 +17,10 @@
     </div>
 
     <div class="actions">
-      <%= form.submit 'Create Payment', class: 'btn btn-primary' %>
+      <%= form.submit 'Save', class: 'btn btn-primary' %>
     </div>
   <% end %>
 
   <%= link_to 'Back', root_path, class: 'btn btn-secondary' %>
+   <%= link_to 'Create new category', new_category_path, class: 'btn btn-primary' %>
 </div>
