--- a/app/views/welcome/landing.html.erb
+++ b/app/views/welcome/landing.html.erb
@@ -4,9 +4,9 @@
     <title>Welcome to MoneyMate</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Welcome to MoneyMate</h1>
-      <p>Manage your finances with ease.</p>
+    <div class="container d-flex flex-column justify-content-center align-items-center">
+      <h1 class="mt-5 pt-5 pb-2 mb-4">Welcome to MoneyMate</h1>
+      <p class="mb-5 pb-5">Manage your finances with ease.</p>
 
       <div class="buttons">
         <%= link_to 'Log In', new_user_session_path, class: 'btn btn-secondary' %>
