--- a/app/views/welcome/landing.html.erb
+++ b/app/views/welcome/landing.html.erb
@@ -5,11 +5,13 @@
   </head>
   <body>
     <div class="container d-flex flex-column justify-content-center align-items-center">
-      <h1 class="mt-5 pt-5 pb-2 mb-4">Welcome to MoneyMate</h1>
-      <p class="mb-5 pb-5">Manage your finances with ease.</p>
+      <h1 class="mt-5 pt-5 pb-2 mb-3">Welcome</h1>
+      <h1 class="pb-2 mb-3">To</h1>
+        <h1 class="pb-2 mb-3">MoneyMate</h1>
+      <p class="mb-5 pb-4">Manage your finances with ease.</p>
 
       <div class="buttons">
-        <%= link_to 'Log In', new_user_session_path, class: 'btn btn-secondary' %>
+        <%= link_to 'Log In', new_user_session_path, class: 'btn btn-secondary pr-3' %>
 <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary' %>
 
       </div>
