Add chages to transaction details page to match wireframe

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -26,7 +26,7 @@
   <% end %>
   
   <div class="col-md-12 col-12 d-flex">
-  <div class="col-md-10 col-12">Total Amount: </div>
+  <div class="col-md-10 col-12">TOTAL PAYMENT</div>
   <hr/>
   <div class="col-md-2 col-12 d-flex justify-content-end mr-1"> $<%= @total_amount %></div></div>
 </ul>
