--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,3 @@
-<%# app/views/devise/registrations/new.html.erb %>
 <% content_for :page_title, "Sign up" %>
 
 <%= render layout: 'layouts/signup' do %>
@@ -9,7 +8,7 @@
       <div class="field">
         <div class="profile-picture">
           <%= image_tag("default_profile_image.png", id: "profile-preview", class: "profile-image") %>
-          <%= f.label :avatar, class: "file-label" %>
+          <%= f.label :upload_picture, class: "file-label" %>
           <%= f.file_field :avatar, accept: "image/*", onchange: "loadProfileImage(this)" %>
         </div>
       </div>
@@ -37,7 +36,7 @@
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
 
-      <div class="actions">
+      <div class="actions mb-3 mt-3">
         <%= f.submit "Sign up" %>
       </div>
     <% end %>
@@ -46,30 +45,6 @@
   <%= render "devise/shared/links" %>
 <% end %>
 
-<style>
-  .profile-picture {
-    position: relative;
-    display: inline-block;
-  }
-
-  .profile-image {
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    object-position: center;
-  }
-
-  .file-label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    opacity: 0;
-  }
-</style>
 
 <script>
   function loadProfileImage(input) {
