--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,10 @@
+<div class="container-fluid d-flex bg-light pt-3 pb-3 mb-3 mt-0"><p class="col-md-7">Gift Credit</p><p class="col-md-5 d-flex justify-content-end">$45</p></div>
 <div class="container justify-content-center align-items-center">
-  <div>
+  <div class="">
     <% if @categories.any? %>
       <ul class="list-unstyled">
         <% @categories.each do |category| %>
-          <li class="row mb-3">
+          <li class="row mb-3 bg-light">
             <div class="col-md-8 col-12">
               <div class="d-flex">
                 <div>
