--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
   <%= javascript_importmap_tags %>
 </head>
-<body>
+<body class='bg-light'>
   <header>
     <nav>
       <div class="container-fluid top">
