--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -6,13 +6,16 @@
       <%= f.text_field :name, class: 'form-control' %>
     </div>
     <div class="form-group">
-  <%= f.label :icon, 'Select an icon:' %>
-  <%= f.select :icon, Category.available_icons, {}, class: 'form-control' %>
-</div>
+      <%= f.label :icon, 'Select an icon:' %>
+      <%= f.select :icon, Category.available_icons, {}, class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :description, 'Description:' %>
+      <%= f.text_area :description, class: 'form-control', rows: 4 %>
+    </div>
 
     <div class="actions">
       <%= f.submit 'Save', class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
-
